<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/new_task"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/newTask"
          android:showAsAction="ifRoom"
          />
     <item android:id="@+id/sort" android:title="@string/sort" android:icon="@android:drawable/ic_menu_sort_alphabetically">
        <menu>
            <item android:id="@+id/byAdd" android:title="@string/byAdd"/>
            <item android:id="@+id/byDate" android:title="@string/duedate"/>
            <item android:id="@+id/byPri" android:title="@string/priority"/>
        </menu>
    </item>
    <item android:id="@+id/sync"
          android:icon="@android:drawable/ic_menu_compass"
          android:title="@string/sync"
          android:showAsAction="ifRoom"
          />
   
</menu>